--- a/index.html
+++ b/index.html
@@ -4,15 +4,34 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Eunhoo Lee</title>
+    <style>
+      body {
+        text-align: center;
+        width: 80%;
+        margin: auto;
+        max-width: 720px;
+      }
+
+      .container > div {
+        display: flex;
+        justify-content: space-between;
+        padding-top: 5px;
+        padding-bottom: 5px;
+      }
+
+      .container > div > div:first-child {
+        text-align: left;
+      }
+    </style>
   </head>
   <body>
     <h1>Eunhoo Lee</h1>
-    <div>
+    <div class="contact">
       <div>Email: eunhoo0713@gmail.com</div>
       <div>Phone: (+82)10-84262-7476</div>
     </div>
     <h2>Education</h2>
-    <div>
+    <div class="container">
       <div>
         <div>
           <div><b>Chung-Ang University</b>, Seoul, Korea</div>
@@ -22,7 +41,7 @@
       </div>
     </div>
     <h2>Work Experience</h2>
-    <div>
+    <div class="container">
       <div>
         <div>
           <div><b>40FY</b></div>
@@ -42,13 +61,19 @@
           <div><b>40FY</b></div>
           <div>Summer Intern</div>
         </div>
-        <div>2022.07 - 2024.08</div>
+        <div>2022.07 - 2022.08</div>
       </div>
     </div>
     <h2>Projects</h2>
-    <div>
+    <div class="container">
       <div>
-        <div><b>CPU-renderer</b></div>
+        <div>
+          <b>CPU-renderer</b>
+          <p>
+            Implelemt rendering pipeline work on CPU, using HTML canvas and
+            WebAssembly.
+          </p>
+        </div>
         <div>
           <a href="https://github.com/UNWHO/cpu-renderer" target="_blank"
             >Link</a
@@ -56,7 +81,14 @@
         </div>
       </div>
       <div>
-        <div><b>Lost Child Prevention</b></div>
+        <div>
+          <b>Lost Child Prevention</b>
+          <p>
+            To prevent lost child indoors, tracking position of a child
+            continously and show a way to the child.
+            <br />
+          </p>
+        </div>
         <div>
           <a
             href="https://github.com/capstone-team-6/capstone-design"
