--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
       .container > div > div:first-child {
         text-align: left;
       }
+
+      div {
+        line-height: 1.4rem;
+      }
     </style>
   </head>
   <body>
@@ -34,8 +38,10 @@
     <div class="container">
       <div>
         <div>
-          <div><b>Chung-Ang University</b>, Seoul, Korea</div>
+          <div><b>Chung-Ang University,</b> Seoul, Korea</div>
           <div>B.S in Software Engineering</div>
+          <div>Cummulative GPA: 4.3 / 4.5</div>
+          <div>Major GPA: 4.5 / 4.5</div>
         </div>
         <div>2019 - Present</div>
       </div>
@@ -46,6 +52,9 @@
         <div>
           <div><b>40FY</b></div>
           <div>FullStack Developer</div>
+          <p>
+            Develop a survey platform that includes editor, renderer, analyzer.
+          </p>
         </div>
         <div>2023.07 - 2024.02</div>
       </div>
@@ -53,6 +62,7 @@
         <div>
           <div><b>40FY</b></div>
           <div>Winter Intern</div>
+          <p>Implement responsive web pages.</p>
         </div>
         <div>2023.01 - 2023.02</div>
       </div>
@@ -60,6 +70,10 @@
         <div>
           <div><b>40FY</b></div>
           <div>Summer Intern</div>
+          <p>
+            Refactor legacy code depends on deprecated library. <br />
+            Fix trivial bugs.
+          </p>
         </div>
         <div>2022.07 - 2022.08</div>
       </div>
@@ -82,11 +96,14 @@
       </div>
       <div>
         <div>
-          <b>Lost Child Prevention</b>
+          <b>Lost Child Prevention(WIP)</b>
           <p>
-            To prevent lost child indoors, tracking position of a child
-            continously and show a way to the child.
+            An application that continuously tracks the position of the child
+            and provides guidance to them.
             <br />
+            As a team leader, oversee the project and design structure,
+            including CI/CD. Also resonsible for implementating an indoor
+            positioning system.
           </p>
         </div>
         <div>
@@ -96,6 +113,21 @@
             >Link</a
           >
         </div>
+      </div>
+    </div>
+    <h2>Honors and Awards</h2>
+    <div class="container">
+      <div>
+        <div>Scholarship for academic excellence, Chung-Ang Univ.</div>
+        <div>Spring 2023</div>
+      </div>
+      <div>
+        <div>Scholarship for academic excellence, Chung-Ang Univ.</div>
+        <div>Fall 2022</div>
+      </div>
+      <div>
+        <div>Scholarship for academic excellence, Chung-Ang Univ.</div>
+        <div>Spring 2022</div>
       </div>
     </div>
   </body>
